# video-riot-censor

./: .gitignore  README.md  requirement.txt  url.txt
cpp/: CMakeLists.txt  demo.cpp  run.sh
cpp/src/: CMakeLists.txt  demo.cpp  image_riot.cpp  image_riot.h  manifest.ini
cpp/src/data/models/cls_image_riot_resnet18_v1.0.1/cls_image_riot_resnet18_onnx_model/: config.pbtxt
cpp/src/data/models/cls_image_riot_resnet18_v1.0.1/cls_image_riot_resnet18_pipeline/: config.pbtxt
cpp/src/data/models/cls_image_riot_resnet18_v1.0.1/cls_image_riot_resnet18_postprocess/: config.pbtxt
cpp/src/data/models/cls_image_riot_resnet18_v1.0.1/cls_image_riot_resnet18_postprocess/1/: process.py
cpp/src/data/models/cls_image_riot_resnet18_v1.0.1/cls_image_riot_resnet18_postprocess/1/forge/: v1.py
cpp/src/data/models/cls_image_riot_resnet18_v1.0.1/cls_image_riot_resnet18_postprocess/1/forge/Forge/: DataType.py  Request.py
cpp/src/data/models/cls_image_riot_resnet18_v1.0.1/cls_image_riot_resnet18_preprocess/: config.pbtxt
cpp/src/data/models/cls_image_riot_resnet18_v1.0.1/cls_image_riot_resnet18_preprocess/1/: process.py
cpp/src/data/models/cls_image_riot_resnet18_v1.0.1/cls_image_riot_resnet18_preprocess/1/forge/: __init__.py  v1.py
cpp/src/data/models/cls_image_riot_resnet18_v1.0.1/cls_image_riot_resnet18_preprocess/1/forge/Forge/: Input.py  Response.py  Tensor.py
